--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
-  "name": "anton-moskalenko/php-tools",
+  "name": "anton-moskalenko/rune-tools",
   "license": "Apache-2.0",
   "description": "Models, collections, various managers, etc.",
   "require": {
     "php": "^7.0 || ^8.0",
+    "anton-moskalenko/rune-config": "dev-main",
     "anton-moskalenko/judex": "dev-master"
   },
   "type": "library",
